--- a/rag_from_scratch/pyproject.toml
+++ b/rag_from_scratch/pyproject.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "ipykernel>=6.29.5",
+    "ipython>=9.3.0",
+    "jupyter>=1.1.1",
+    "notebook>=7.4.3",
+]
