--- a/rag_from_scratch/pyproject.toml
+++ b/rag_from_scratch/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "ipython>=9.3.0",
     "jiter>=0.10.0",
     "jupyter>=1.1.1",
+    "loguru>=0.7.3",
     "notebook>=7.4.3",
     "pydantic>=2.11.7",
     "pymupdf>=1.26.1",
